--- a/app/views/layouts/stores/_styles_&_scripts.erb
+++ b/app/views/layouts/stores/_styles_&_scripts.erb
@@ -3,8 +3,8 @@
 <script type="text/javascript" src="jquery.blend.js"></script>
 <![endif]-->
 <% @stylesheets.each do |style| %>
-  <link href="/assets/store_assets/<%= style.id %>/<%= style.file_file_name %>" media="all" rel="stylesheet" type="text/css">
+  <link href="<%= style.file.url %>" media="all" rel="stylesheet" type="text/css">
 <% end %>
 <% @javascripts.each do |js| %>
-  <script type="text/javascript" src="/assets/store_assets/<%= js.id %>/<%= js.file_file_name %>"></script>
+  <script type="text/javascript" src="<%= js.file.url %>"></script>
 <% end %>
