--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -129,6 +129,7 @@ table{
   text-transform: uppercase;
   font-size: 12px;
   a{
+    padding: 7px;
     cursor: pointer;
     display: block;
     float: left;
@@ -183,8 +184,7 @@ table{
 }
 
 #stores_list{
-  max-width: 520px;
-  max-height: 420px;
+  overflow-x: visible;
   overflow-y: auto;
   display: none;
   text-align: left;
@@ -193,42 +193,42 @@ table{
   left: 0px;
   padding:  5px;
   z-index: 20000;
-  background-color: rgba(146, 172, 139, 1);
-  box-shadow: 1px 1px 1px 1px rgba(48, 124, 58, 0.61);
-  border: 1px solid #CCC;
-  border-top-color: green;
-  border-left: none;
-  border-radius: 0 0 10px 0;
+  background-color: #555;
   a{
     -webkit-transition: background-color 0.5s ease;
     -webkit-transition: box-shadow 0.5s ease;
-    margin-top: 3px;
-    padding: 4px;
+    padding: 3px;
     font-size: 0.7em;
     font-family: verdana;
     text-transform: uppercase;
-    color: rgba(247, 247, 247, 0.92);
+    color: rgba(241, 241, 247, 0.99);
     display: block;
-    &:first-child{
-      margin-top: 30px;
+    &:last-child{
+      margin-bottom: 20px;
     }
-    &:hover, &#active_store{
-      border-radius: 5px;
-      box-shadow: 0 0 5px rgba(36, 103, 25, 0.78) inset;
+    &:hover{
       color: white;
+      background-color: #51A351;
     }
     &#active_store{
       font-weight: bold;
+      color: white;
     }
     &#new_store{
       float: right;
-      border-radius: 3px;
       text-align: center;
       font-weight: bold;
       position: absolute;
-      top: 10px;
-      right: 5px;
+      background-color: #efefef;
+      border: 1px solid #555;
+      left:0;
+      right: 0;
+      color: #555;
+      text-align: center;
+      bottom: 0;
       height: 20px;
+      &:hover{
+      }
     }
   }
 }
