--- a/app/views/admin/assets/create.js.erb
+++ b/app/views/admin/assets/create.js.erb
@@ -1,15 +1,22 @@
 <%= remotipart_response do %>
   <% if @new_assets.length != 0 %>
-    <% if @new_images.length != 0%>
-      j("#images .asset_items").append(
-        '<% @new_images.each do |image| %>' +
-          '<div class="asset_item just_now_added_asset" id="asset_<%= image.id %>">' +
-            '<%= image.file_file_name %>' +
-          '</div>' +
+    <% if @new_htmls.length != 0%>
+      j("#htmls .asset_items").append(
+        '<% @new_htmls.each do |html| %>' +
+          '<%= link_to_function html.file_file_name, "loadAsset(#{@store.id}, #{html.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{html.id}" %>' +
         '<% end%>'
       );
-      j("#images .asset_items").show();
-      j("#images .no_assets").remove();
+      j("#javascripts .asset_items").show();
+      j("#javascripts .no_assets").remove();
+    <% end %>
+    <% if @new_javascripts.length != 0%>
+      j("#javascripts .asset_items").append(
+        '<% @new_javascripts.each do |javascript| %>' +
+          '<%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{javascript.id}" %>' +
+        '<% end%>'
+      );
+      j("#javascripts .asset_items").show();
+      j("#javascripts .no_assets").remove();
     <% end %>
     <% if @new_stylesheets.length != 0%>
       j("#stylesheets .asset_items").append(
@@ -20,14 +27,16 @@
       j("#stylesheets .asset_items").show();
       j("#stylesheets .no_assets").remove();
     <% end %>
-    <% if @new_javascripts.length != 0%>
-      j("#javascripts .asset_items").append(
-        '<% @new_javascripts.each do |javascript| %>' +
-          '<%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{javascript.id}" %>' +
+    <% if @new_images.length != 0%>
+      j("#images .asset_items").append(
+        '<% @new_images.each do |image| %>' +
+          '<div class="asset_item just_now_added_asset" id="asset_<%= image.id %>">' +
+            '<%= image.file_file_name %>' +
+          '</div>' +
         '<% end%>'
       );
-      j("#javascripts .asset_items").show();
-      j("#javascripts .no_assets").remove();
+      j("#images .asset_items").show();
+      j("#images .no_assets").remove();
     <% end %>
 
     j("#asset_list").append(
