--- a/app/views/admin/assets/create.js.erb
+++ b/app/views/admin/assets/create.js.erb
@@ -1,6 +1,6 @@
 <%= remotipart_response do %>
   <% if @new_assets.length != 0 %>
-    <% if @new_htmls.length != 0%>
+    <% unless @new_htmls.empty? %>
       j("#htmls .asset_items").append(
         '<% @new_htmls.each do |html| %>' +
           '<%= link_to_function html.file_file_name, "loadAsset(#{@store.id}, #{html.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{html.id}" %>' +
@@ -9,7 +9,7 @@
       j("#javascripts .asset_items").show();
       j("#javascripts .no_assets").remove();
     <% end %>
-    <% if @new_javascripts.length != 0%>
+    <% unless @new_javascripts.empty? %>
       j("#javascripts .asset_items").append(
         '<% @new_javascripts.each do |javascript| %>' +
           '<%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{javascript.id}" %>' +
@@ -18,7 +18,7 @@
       j("#javascripts .asset_items").show();
       j("#javascripts .no_assets").remove();
     <% end %>
-    <% if @new_stylesheets.length != 0%>
+    <% unless @new_stylesheets.empty? %>
       j("#stylesheets .asset_items").append(
         '<% @new_stylesheets.each do |stylesheet| %>' +
           '<%= link_to_function stylesheet.file_file_name, "loadAsset(#{@store.id}, #{stylesheet.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{stylesheet.id}" %>' +
@@ -27,7 +27,7 @@
       j("#stylesheets .asset_items").show();
       j("#stylesheets .no_assets").remove();
     <% end %>
-    <% if @new_images.length != 0%>
+    <% unless @new_images.empty? %>
       j("#images .asset_items").append(
         '<% @new_images.each do |image| %>' +
           '<div class="asset_item just_now_added_asset" id="asset_<%= image.id %>">' +
@@ -59,6 +59,14 @@
       active:"<%= asset.active%>"
     };
       <% end %>
+  <% end %>
+
+  <% unless @dublicable_names.empty? %>
+    var dublicable_names = [];
+    <% @dublicable_names.each do |name| %>
+      dublicable_names.push("<%= name %>");
+    <% end %>
+    alert("Error! " + dublicable_names.join(", ") + " already exist! And they can't be created.");
   <% end %>
 
   j("form #asset_file").val("");
