--- a/app/views/admin/assets/index.erb
+++ b/app/views/admin/assets/index.erb
@@ -175,7 +175,7 @@
       You can create new file or upload multiple files from your PC.<br>
       You can also accept a different options in settings menu.<br>
       <br>
-      Follow <%= link_to "this link", "#"%>, You can read documentation for this editor.
+      Follow <%= link_to "this link", documentation_editor_path, :target => "_blank"%>, You can read documentation for this editor.
     </div>
   </div>
   <div class='cleaner'></div>
