--- a/app/assets/stylesheets/stores/application.css
+++ b/app/assets/stylesheets/stores/application.css
@@ -7,18 +7,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: verdana;
-  color: #555;
+  font-family: "Verdana", sans-serif;
   background-color: white;
 }
 
 a{
   text-decoration: none;
-  color: #555;
-  font-family: "Courier New";
-  &:hover{
-    color: #9acd32;
-  }
+  font-family: "Courier New", sans-serif;
 }
 
 p{
@@ -27,56 +22,12 @@ p{
 
 h1, h2, h3, h4, h5, h6{
   margin: 8px 3px;
-  font-family: courier;
-  color: #35683c;
-}
-h1{
-  font-size: 1.6em;
-}
-h2{
-  font-size: 1.4em;
-}
-h3{
-  font-size: 1.2em;
-}
-h4{
-  font-size: 1.15em;
-}
-h5{
-  font-size: 1.1em;
-}
-h6{
-  font-size: 1.05em;
 }
 
 label{
   font-size: 0.7em;
   padding: 5px;
 }
-input, select {
-  height: 30px;
-  border-radius: 5px;
-  border: 1px solid #9acd32;
-  margin: 0px;
-  padding: 3px 6px;
-  color: #555;
-  font-size: 0.95em;
-}
-
-input[type=submit] {
-  cursor: pointer;
-}
-
-form input, form select {
-  display: block;
-  margin-top: 2px;
-  margin-bottom: 5px;
-}
-
-.cleaner { clear: both }
-.float_l { float: left }
-.float_r { float: right }
-.center { text-align: center;}
 
 #header {
   position: relative;
@@ -84,102 +35,33 @@ form input, form select {
   left: 0;
   width: 100%;
   height: 40px;
-  box-shadow: #5172cd 0 1px 15px;
-  background-color: #5172cd;
-  #title{
-    float: left;
-    font-family: Helvetica;
-    color: #555;
-    font-weight: bold;
-    margin: 4px 10px;
-    font-size: 27px;
-    cursor: pointer;
-  }
-  #header_menu{
-    margin: 8px;
-    float: right;
-    #change_locale_form{
-      width: 100px;
-      padding: 0;
-      display: inline-block;
-    }
-    a{
-      color: #d6d6d6;
-      border-left: 2px dotted blue;
-      margin-right: 3px;
-      margin-left: 3px;
-      padding-left: 6px;
-      &:hover{
-        color: white;
-      }
-    }
-  }
+  background-color: rgba(7, 9, 113, 0.71);
 }
 
 #main {
   margin: auto;
   width: 800px;
-  #content {
-    margin: 15px 0;
-    border-radius: 5px;
-    box-shadow: #b0b280 0px 0px 5px;
-    width: 800px;
-    min-height: 400px;
-    background: white;
-    padding: 20px 15px;
-  }
+  min-height: 400px;
+  background-color: rgba(49, 149, 93, 0.63);
+}
+#content {
+  margin: 15px 0;
+  border-radius: 5px;
+  box-shadow: #b0b280 0px 0px 5px;
+  width: 800px;
+  min-height: 400px;
+  background: white;
+  padding: 20px 15px;
 }
 
 #footer {
   width: 100%;
+  min-height: 70px;
   text-align: center;
   background: #bdcec7;
   font-size: 0.7em;
   line-height: 1em;
   padding: 3px;
-  background: #c6c6e5;
-}
-
-#signin_window{
-  width: 183px;
-  display: none;
-  text-align: left;
-  position: fixed;
-  top: 53px;
-  right: 5px;
-  padding: 10px;
-  z-index: 100;
-  background-color: #5172cd;
-  box-shadow: #5172cd 0 0 15px;
-  border: 1px solid #CCC;
-  border-radius: 10px;
-  text-shadow: #121212;
-  opacity: 0.85;
-  p{
-    font-size: 0.8em;
-  }
-  .field  input{
-    width: 160px;
-  }
-}
-
-#store_menu{
-  border-bottom: 1px solid #2e8b57;
-  margin-bottom: 3px;
-  a{
-    font-family: tahoma;
-    border-left: 1px dotted #9acd32;
-    padding: 4px;
-    &:first-child{
-      border-left: none;
-    }
-  }
-}
-
-#store_title{
-  color: #696969;
-  font-weight: bolder;
-  font-size: 0.8em;
 }
 
 .product_box{
@@ -187,28 +69,27 @@ form input, form select {
   margin-top: 1em;
   border-bottom: 1px dotted #77d;
   min-height: 100px;
-  img{
+}
+img{
     width: 80px;
     margin-right: 5px;
     margin-bottom: 5px;
-  }
-  h3{
+}
+h3{
     font-size: 120%;
     font-family: sans-serif;
     margin-left: 100px;
     margin-top: 0;
     margin-bottom: 2px;
     color: #227;
-  }
-  .product_desc{
+}
 
-  }
-  .price{
+.price{
     color: #44a;
     font-weight: bold;
     margin-right: 3em;
-  }
 }
+
 
 /* container holder */
 
@@ -218,27 +99,27 @@ form input, form select {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.298);
   margin-bottom: 20px;
   padding: 15px 30px 15px 15px;
-  .comment_remover{
+}
+.container_holder  .comment_remover{
     display: none;
     position: relative;
     width: 20px;
     top: 0px;
     float: right;
-  }
-  &:hover{
-    .comment_remover{
-      display: inline;
-      #comment_remove{
-        cursor: pointer;
-      }
-    }
-  }
-  .container_picture{
+ }
+.container_holder:hover .comment_remover{
+    display: inline;
+}
+.container_holder:hover .comment_remover #comment_remove{
+    cursor: pointer;
+}
+
+.container_holder .container_picture{
     background-color: white;
     padding: 4px;
     margin: 0;
-  }
 }
+
 
 .comment-info {
   width: 600px;
