--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,12 +17,12 @@
       <%= f.password_field :password %>
     </div>
     <div>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation %>
     </div>
     <div>
-      <%= f.label :avatar, "Avatar" %>
-      <%= f.file_field :avatar %>
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, :class => "with_file_name_label" %>
     </div>
 
     <div>
